tests/error_messages/invalid_mode.stderr
error: unknown mode `invalid`, expected `wrap` or `clamp`
 --> tests/error_messages/invalid_mode.rs:4:20
  |
4 | #[rotalubat(mode = "invalid")]
  |                    ^^^^^^^^^
