tests/error_messages/invalid_mode.rs
use rotalubat::Rotalubat;

#[derive(Rotalubat)]
#[rotalubat(mode = "invalid")]
enum Foo {
    A,
    B,
}

fn main() {}
